package br.com.hamburgueria;

public class XSalada extends Lanche {

    @Override
    public String getDescricao() {
        return "X-Salada";
    }

    @Override
    public double getPreco() {
        return 18.00;
    }
}
