package com.example.lanche;

public class XBurguer extends Lanche {

    @Override
    public String getDescricao() {
        return "X-Burguer";
    }

    @Override
    public double getPreco() {
        return 16.00;
    }
}
