package com.example.lanche;

public class XTudo extends Lanche {

    @Override
    public String getDescricao() {
        return "X-Tudo";
    }

    @Override
    public double getPreco() {
        return 24.00;
    }
}
