package com.example.modelo;

public class BatataFrita extends Acompanhamento {

    @Override
    public String getNome() {
        return "Batata Frita";
    }

    @Override
    public double getPreco() {
        return 10.00;
    }
}
