package com.example.modelo;

public class OnionRings extends Acompanhamento {

    @Override
    public String getNome() {
        return "Onion Rings";
    }

    @Override
    public double getPreco() {
        return 12.00;
    }
}
