package com.example.modelo;

public class Salada extends Acompanhamento {

    @Override
    public String getNome() {
        return "Salada";
    }

    @Override
    public double getPreco() {
        return 8.00;
    }
}
